// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
@media  {
  .c-iSwBqf {
    display: flex;
    flex-wrap: wrap;
  }

  .c-hZPcEN {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: 0;
    height: var(--sizes-1);
    width: var(--sizes-1);
    transition: all 50ms ease-out;
  }

  .c-hZPcEN:hover {
    outline: none;
  }

  .c-hZPcEN:focus {
    outline: none;
  }

  :checked + .c-hZPcEN {
    background-color: var(--colors-primary);
    border-color: var(--colors-primary);
  }

  .c-hZPcEN[disabled] {
    background-color: var(--colors-tonal200);
    border-color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-ktjmCS {
    height: 6px;
    width: 6px;
    border-radius: var(--radii-round);
    background-color: white;
    position: absolute;
  }
}

<div>
  <div
    class="c-iSwBqf"
    role="radiogroup"
  >
    <input
      disabled=""
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="c-hZPcEN"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
@media  {
  .c-iSwBqf {
    display: flex;
    flex-wrap: wrap;
  }

  .c-hZPcEN {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background-color: transparent;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-round);
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: 0;
    height: var(--sizes-1);
    width: var(--sizes-1);
    transition: all 50ms ease-out;
  }

  .c-hZPcEN:hover {
    outline: none;
  }

  .c-hZPcEN:focus {
    outline: none;
  }

  :checked + .c-hZPcEN {
    background-color: var(--colors-primary);
    border-color: var(--colors-primary);
  }

  .c-hZPcEN[disabled] {
    background-color: var(--colors-tonal200);
    border-color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-ktjmCS {
    height: 6px;
    width: 6px;
    border-radius: var(--radii-round);
    background-color: white;
    position: absolute;
  }
}

<div>
  <div
    class="c-iSwBqf"
    role="radiogroup"
  >
    <input
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="indicator"
      class="c-hZPcEN"
      data-radix-roving-focus-group-id="radix-id-0-1"
      data-state="unchecked"
      role="radio"
      tabindex="0"
      type="button"
      value="value"
    />
  </div>
</div>
`;
